--- a/public/project/internal-project/index.html
+++ b/public/project/internal-project/index.html
@@ -1237,7 +1237,7 @@
         
 
   
-  <span ><a href="/author/nelson-bighetti/">Nelson Bighetti</a></span>, <span >Robert Ford</span>
+  <span ><a href="/author/nelson-bighetti/">Nelson Bighetti</a></span>, <span >robert ford</span>
       </div>
       
     </div>
