--- a/public/publication/conference-paper/index.html
+++ b/public/publication/conference-paper/index.html
@@ -673,7 +673,7 @@
     
 
   
-  <span ><a href="/author/nelson-bighetti/">Nelson Bighetti</a></span>, <span >Robert Ford</span>
+  <span ><a href="/author/nelson-bighetti/">Nelson Bighetti</a></span>, <span >robert ford</span>
   </div>
   
   
