--- a/public/publication/journal-article/index.html
+++ b/public/publication/journal-article/index.html
@@ -673,7 +673,7 @@
     
 
   
-  <span ><a href="/author/nelson-bighetti/">Nelson Bighetti</a></span><span title="Equal contribution" class="author-notes">(?)</span>, <span >Robert Ford</span><span title="Equal contribution" class="author-notes">(?)</span>
+  <span ><a href="/author/nelson-bighetti/">Nelson Bighetti</a></span><span title="Equal contribution" class="author-notes">(?)</span>, <span >robert ford</span><span title="Equal contribution" class="author-notes">(?)</span>
   </div>
   
   
