--- a/public/404.html
+++ b/public/404.html
@@ -27,7 +27,7 @@
   
     
   
-  <meta name="description" content="Kallpa Comunitaria organización política que promueve la comunidad como forma social">
+  <meta name="description" content="Kallpa Comunitaria organización política que promueve la comunidad como forma social.">
 
   
   <link rel="alternate" hreflang="es" href="/404.html">
@@ -279,7 +279,7 @@
   <meta property="og:site_name" content="Kallpa Comunitaria">
   <meta property="og:url" content="/404.html">
   <meta property="og:title" content="404 Page not found | Kallpa Comunitaria">
-  <meta property="og:description" content="Kallpa Comunitaria organización política que promueve la comunidad como forma social"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Kallpa Comunitaria organización política que promueve la comunidad como forma social."><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="es">
   
     
