cambio de fondo de hero

--- a/public/articulos/bolivia-en-disputa/index.html
+++ b/public/articulos/bolivia-en-disputa/index.html
@@ -803,7 +803,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=/articulos/bolivia-en-disputa/&amp;t=Bolivia%20en%20disputa" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/articulos/bolivia-en-disputa/&amp;t=Bolivia%20en%20disputa" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
