--- a/public/historia/a-40-anios-del-golpe/index.html
+++ b/public/historia/a-40-anios-del-golpe/index.html
@@ -752,7 +752,7 @@ El Plan Cóndor fue el ejemplo claro del direccionamiento de los gobiernos milit
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=/historia/a-40-anios-del-golpe/&amp;t=A%2040%20a%c3%b1os%20de%20la%20dictadura%20de%20Garcia%20Meza" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/historia/a-40-anios-del-golpe/&amp;t=A%2040%20a%c3%b1os%20de%20la%20dictadura%20de%20Garcia%20Meza" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
