--- a/public/index.html
+++ b/public/index.html
@@ -681,7 +681,7 @@
   
   
 
-  <section id="hero" class="home-section wg-hero dark  bg-image parallax " style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(&#39;/img/weave2.gif&#39;);background-size: cover;background-position: bottom;" >
+  <section id="hero" class="home-section wg-hero dark  bg-image parallax " style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(&#39;/img/whipala.jpg&#39;);background-size: cover;background-position: bottom;" >
     <div class="container">
       
 
