--- a/public/noticias/golpe-de-estado-reabrio-heridas/index.html
+++ b/public/noticias/golpe-de-estado-reabrio-heridas/index.html
@@ -817,7 +817,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=/noticias/golpe-de-estado-reabrio-heridas/&amp;t=Golpe%20de%20Estado%20en%20Bolivia%20reabri%c3%b3%20heridas%20raciales," target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/noticias/golpe-de-estado-reabrio-heridas/&amp;t=Golpe%20de%20Estado%20en%20Bolivia%20reabri%c3%b3%20heridas%20raciales," target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
