--- a/public/cultura/el-pueblo-unido-jamas-sera-vencido/index.html
+++ b/public/cultura/el-pueblo-unido-jamas-sera-vencido/index.html
@@ -753,7 +753,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=/cultura/el-pueblo-unido-jamas-sera-vencido/&amp;t=El%20pueblo%20unido%20jam%c3%a1s%20ser%c3%a1%20vencido" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/cultura/el-pueblo-unido-jamas-sera-vencido/&amp;t=El%20pueblo%20unido%20jam%c3%a1s%20ser%c3%a1%20vencido" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
