--- a/public/project/external-project/index.html
+++ b/public/project/external-project/index.html
@@ -818,7 +818,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=/project/external-project/&amp;t=External%20Project" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/project/external-project/&amp;t=External%20Project" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
