--- a/public/talk/example/index.html
+++ b/public/talk/example/index.html
@@ -903,7 +903,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=/talk/example/&amp;t=Example%20Talk" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/talk/example/&amp;t=Example%20Talk" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
