errores en el apellido Villarroel

--- a/public/historia/han-matado-a-nuestro-padre/index.html
+++ b/public/historia/han-matado-a-nuestro-padre/index.html
@@ -769,7 +769,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tag/gualberto-villaroel/">Gualberto Villaroel</a>
+  <a class="badge badge-light" href="/tag/gualberto-villarroel/">Gualberto Villarroel</a>
   
 </div>
 
