nueva noticia sobre el TSE

--- a/public/noticias/golpe-de-estado-reabrio-heridas/index.html
+++ b/public/noticias/golpe-de-estado-reabrio-heridas/index.html
@@ -661,7 +661,7 @@
   
   <span class="middot-divider"></span>
   <span class="article-categories">
-    <i class="fas fa-folder mr-1"></i><a href="/category/noticias/">Noticias</a></span>
+    <i class="fas fa-folder mr-1"></i><a href="/category/noticias/">noticias</a></span>
   
 
 </div>
