noticia de la cob

--- a/public/slides/example/index.html
+++ b/public/slides/example/index.html
@@ -319,7 +319,7 @@ Three
       { src: '\/js\/vendor\/reveal.js\/plugin\/notes\/notes.js', async: true }
     ]};
 
-    let revealDefaults = { center: true, controls: true, history: true, progress: true, transition: 'slide', mouseWheel: true };
+    let revealDefaults = { center: true, controls: true, history: true, progress: true, transition: 'slide', mouseWheel: true, slideNumber: 'c/t' };
     let revealOptions = Object.assign({}, revealDefaults, revealPlugins);
     Reveal.initialize(revealOptions);
   </script>
