--- a/public/historia/han-matado-a-nuestro-padre/index.html
+++ b/public/historia/han-matado-a-nuestro-padre/index.html
@@ -647,6 +647,10 @@
 
   
   
+  <span class="middot-divider"></span>
+  <span class="article-categories">
+    <i class="fas fa-folder mr-1"></i><a href="/category/historia/">historia</a></span>
+  
 
 </div>
 
