--- a/public/historia/san-juan/index.html
+++ b/public/historia/san-juan/index.html
@@ -645,6 +645,10 @@
 
   
   
+  <span class="middot-divider"></span>
+  <span class="article-categories">
+    <i class="fas fa-folder mr-1"></i><a href="/category/historia/">historia</a></span>
+  
 
 </div>
 
