correction url para twitter

--- a/public/articulos/bolivia-en-disputa/index.html
+++ b/public/articulos/bolivia-en-disputa/index.html
@@ -796,7 +796,7 @@ s.setAttribute(&lsquo;data-timestamp&rsquo;, +new Date());
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/articulos/bolivia-en-disputa/&amp;text=Bolivia%20en%20disputa" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/articulos/bolivia-en-disputa/&amp;text=Bolivia%20en%20disputa" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
