--- a/public/articulos/el-golpismo/index.html
+++ b/public/articulos/el-golpismo/index.html
@@ -782,7 +782,7 @@ Bajo estos señalados factores constituyentes de un golpe de Estado, los nuevos 
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/articulos/el-golpismo/&amp;text=Anatom%c3%ada%20de%20los%20golpes%20de%20Estado" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/articulos/el-golpismo/&amp;text=Anatom%c3%ada%20de%20los%20golpes%20de%20Estado" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
