--- a/public/articulos/viene-el-lobo/index.html
+++ b/public/articulos/viene-el-lobo/index.html
@@ -783,7 +783,7 @@ Fecha al 16 de Julio. Tomado del portal Statista. Número de pruebas médicas de
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/articulos/viene-el-lobo/&amp;text=Jeanine%20y%20el%20lobo" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/articulos/viene-el-lobo/&amp;text=Jeanine%20y%20el%20lobo" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
