--- a/public/biblioteca/antonio-gramsci/index.html
+++ b/public/biblioteca/antonio-gramsci/index.html
@@ -756,7 +756,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/biblioteca/antonio-gramsci/&amp;text=La%20formaci%c3%b3n%20de%20los%20intelectuales" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/biblioteca/antonio-gramsci/&amp;text=La%20formaci%c3%b3n%20de%20los%20intelectuales" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
