--- a/public/biblioteca/contra-el-trotskismo/index.html
+++ b/public/biblioteca/contra-el-trotskismo/index.html
@@ -756,7 +756,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/biblioteca/contra-el-trotskismo/&amp;text=Contra%20el%20Trotskismo" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/biblioteca/contra-el-trotskismo/&amp;text=Contra%20el%20Trotskismo" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
