--- a/public/biblioteca/operacion-condor/index.html
+++ b/public/biblioteca/operacion-condor/index.html
@@ -771,7 +771,7 @@ hacia la verdad.</p>
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/biblioteca/operacion-condor/&amp;text=Operaci%c3%b3n%20Condor,%20pacto%20criminal" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/biblioteca/operacion-condor/&amp;text=Operaci%c3%b3n%20Condor,%20pacto%20criminal" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
