--- a/public/biblioteca/poetas-mios-oscar-alfaro/index.html
+++ b/public/biblioteca/poetas-mios-oscar-alfaro/index.html
@@ -760,7 +760,7 @@ La edición digitalizada de estos cuadernos poéticos carece de toda finalidad e
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/biblioteca/poetas-mios-oscar-alfaro/&amp;text=%c3%93scar%20Alfaro" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/biblioteca/poetas-mios-oscar-alfaro/&amp;text=%c3%93scar%20Alfaro" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
