--- a/public/biblioteca/poetas-mios-roque-dalton/index.html
+++ b/public/biblioteca/poetas-mios-roque-dalton/index.html
@@ -763,7 +763,7 @@ Fonseca, Miguel Ángel Asturias, Juan Gelman y Nazim Hikmet.</p>
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/biblioteca/poetas-mios-roque-dalton/&amp;text=Roque%20Dalton" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/biblioteca/poetas-mios-roque-dalton/&amp;text=Roque%20Dalton" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
