--- a/public/biblioteca/rosa-luxemburgo/index.html
+++ b/public/biblioteca/rosa-luxemburgo/index.html
@@ -765,7 +765,7 @@ totalmente a la gran batalla histórica.</p>
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/biblioteca/rosa-luxemburgo/&amp;text=Rosa%20Luxemburgo" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/biblioteca/rosa-luxemburgo/&amp;text=Rosa%20Luxemburgo" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
