--- a/public/cultura/a-pesar-de-la-ira/index.html
+++ b/public/cultura/a-pesar-de-la-ira/index.html
@@ -733,7 +733,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/cultura/a-pesar-de-la-ira/&amp;text=Marcelo%20Quiroga%20Santa%20Cruz" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/cultura/a-pesar-de-la-ira/&amp;text=Marcelo%20Quiroga%20Santa%20Cruz" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
