--- a/public/cultura/el-pueblo-unido-jamas-sera-vencido/index.html
+++ b/public/cultura/el-pueblo-unido-jamas-sera-vencido/index.html
@@ -732,7 +732,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/cultura/el-pueblo-unido-jamas-sera-vencido/&amp;text=El%20pueblo%20unido%20jam%c3%a1s%20ser%c3%a1%20vencido" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/cultura/el-pueblo-unido-jamas-sera-vencido/&amp;text=El%20pueblo%20unido%20jam%c3%a1s%20ser%c3%a1%20vencido" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
