--- a/public/historia/a-40-anios-del-golpe/index.html
+++ b/public/historia/a-40-anios-del-golpe/index.html
@@ -735,7 +735,7 @@ El Plan Cóndor fue el ejemplo claro del direccionamiento de los gobiernos milit
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/historia/a-40-anios-del-golpe/&amp;text=A%2040%20a%c3%b1os%20de%20la%20dictadura%20de%20Garcia%20Meza" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/historia/a-40-anios-del-golpe/&amp;text=A%2040%20a%c3%b1os%20de%20la%20dictadura%20de%20Garcia%20Meza" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
