--- a/public/historia/cumpleanios-chavez/index.html
+++ b/public/historia/cumpleanios-chavez/index.html
@@ -737,7 +737,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/historia/cumpleanios-chavez/&amp;text=66%20A%c3%b1os%20del%20nacimiento%20del%20comandante%20Ch%c3%a1vez" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/historia/cumpleanios-chavez/&amp;text=66%20A%c3%b1os%20del%20nacimiento%20del%20comandante%20Ch%c3%a1vez" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
