--- a/public/historia/han-matado-a-nuestro-padre/index.html
+++ b/public/historia/han-matado-a-nuestro-padre/index.html
@@ -782,7 +782,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/historia/han-matado-a-nuestro-padre/&amp;text=Han%20matado%20a%20nuestro%20padre,%20Gualberto%20Villarroel" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/historia/han-matado-a-nuestro-padre/&amp;text=Han%20matado%20a%20nuestro%20padre,%20Gualberto%20Villarroel" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
