--- a/public/historia/san-juan/index.html
+++ b/public/historia/san-juan/index.html
@@ -770,7 +770,7 @@ La masacre se desató después de la media noche. Por el oeste bajaron las tropa
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/historia/san-juan/&amp;text=San%20Juan%20-%20masacre%20y%20memoria" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/historia/san-juan/&amp;text=San%20Juan%20-%20masacre%20y%20memoria" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
