--- a/public/noticias/advierten-proceso-penal-contra/index.html
+++ b/public/noticias/advierten-proceso-penal-contra/index.html
@@ -779,7 +779,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/noticias/advierten-proceso-penal-contra/&amp;text=Advierten%20de%20proceso%20penal%20contra%20%c3%b3rgano%20electoral%20boliviano" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/noticias/advierten-proceso-penal-contra/&amp;text=Advierten%20de%20proceso%20penal%20contra%20%c3%b3rgano%20electoral%20boliviano" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
