--- a/public/noticias/cob-decide-huelga-general/index.html
+++ b/public/noticias/cob-decide-huelga-general/index.html
@@ -787,7 +787,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/noticias/cob-decide-huelga-general/&amp;text=COB%20decide%20huelga%20general%20indefinida%20en%20demanda%20de%20elecciones%20el%206%20de%20septiembre" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/noticias/cob-decide-huelga-general/&amp;text=COB%20decide%20huelga%20general%20indefinida%20en%20demanda%20de%20elecciones%20el%206%20de%20septiembre" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
