--- a/public/noticias/dictadura-boliviana-se-dispone-/index.html
+++ b/public/noticias/dictadura-boliviana-se-dispone-/index.html
@@ -792,7 +792,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/noticias/dictadura-boliviana-se-dispone-/&amp;text=Dictadura%20boliviana%20se%20dispone%20a%20detener%20a%20candidato%20del%20MAS" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/noticias/dictadura-boliviana-se-dispone-/&amp;text=Dictadura%20boliviana%20se%20dispone%20a%20detener%20a%20candidato%20del%20MAS" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
