--- a/public/noticias/golpe-de-estado-reabrio-heridas/index.html
+++ b/public/noticias/golpe-de-estado-reabrio-heridas/index.html
@@ -796,7 +796,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/noticias/golpe-de-estado-reabrio-heridas/&amp;text=Golpe%20de%20Estado%20en%20Bolivia%20reabri%c3%b3%20heridas%20raciales," target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/noticias/golpe-de-estado-reabrio-heridas/&amp;text=Golpe%20de%20Estado%20en%20Bolivia%20reabri%c3%b3%20heridas%20raciales," target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
