--- a/public/talk/example/index.html
+++ b/public/talk/example/index.html
@@ -882,7 +882,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/talk/example/&amp;text=Example%20Talk" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/talk/example/&amp;text=Example%20Talk" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
