--- a/public/cultura/la-consigna-fsln/index.html
+++ b/public/cultura/la-consigna-fsln/index.html
@@ -729,7 +729,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/cultura/la-consigna-fsln/&amp;text=Viva%20los%20campesinos!" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/cultura/la-consigna-fsln/&amp;text=Viva%20los%20campesinos!" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
