--- a/public/project/external-project/index.html
+++ b/public/project/external-project/index.html
@@ -797,7 +797,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/project/external-project/&amp;text=External%20Project" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/project/external-project/&amp;text=External%20Project" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
