--- a/public/project/internal-project/index.html
+++ b/public/project/internal-project/index.html
@@ -820,7 +820,7 @@
       
       
       <li>
-        <a href="https://twitter.com/intent/tweet?url=/project/internal-project/&amp;text=Internal%20Project" target="_blank" rel="noopener" class="share-btn-twitter">
+        <a href="https://twitter.com/intent/tweet?url=https://kcomunitaria.netlify.app/project/internal-project/&amp;text=Internal%20Project" target="_blank" rel="noopener" class="share-btn-twitter">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
