arreglos a page_sharer.toml para que facebook funciones

--- a/public/articulos/bolivia-en-disputa/index.html
+++ b/public/articulos/bolivia-en-disputa/index.html
@@ -809,7 +809,7 @@ s.setAttribute(&lsquo;data-timestamp&rsquo;, +new Date());
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/articulos/bolivia-en-disputa/&amp;t=Bolivia%20en%20disputa" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/articulos/bolivia-en-disputa/&amp;t=Bolivia%20en%20disputa" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
