--- a/public/articulos/viene-el-lobo/index.html
+++ b/public/articulos/viene-el-lobo/index.html
@@ -798,7 +798,7 @@ Fecha al 16 de Julio. Tomado del portal Statista. Número de pruebas médicas de
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/articulos/viene-el-lobo/&amp;t=Jeanine%20y%20el%20lobo" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/articulos/viene-el-lobo/&amp;t=Jeanine%20y%20el%20lobo" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
