--- a/public/biblioteca/contra-el-trotskismo/index.html
+++ b/public/biblioteca/contra-el-trotskismo/index.html
@@ -769,7 +769,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/biblioteca/contra-el-trotskismo/&amp;t=Contra%20el%20Trotskismo" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/biblioteca/contra-el-trotskismo/&amp;t=Contra%20el%20Trotskismo" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
