--- a/public/biblioteca/operacion-condor/index.html
+++ b/public/biblioteca/operacion-condor/index.html
@@ -784,7 +784,7 @@ hacia la verdad.</p>
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/biblioteca/operacion-condor/&amp;t=Operaci%c3%b3n%20Condor,%20pacto%20criminal" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/biblioteca/operacion-condor/&amp;t=Operaci%c3%b3n%20Condor,%20pacto%20criminal" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
