--- a/public/biblioteca/poetas-mios-oscar-alfaro/index.html
+++ b/public/biblioteca/poetas-mios-oscar-alfaro/index.html
@@ -773,7 +773,7 @@ La edición digitalizada de estos cuadernos poéticos carece de toda finalidad e
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/biblioteca/poetas-mios-oscar-alfaro/&amp;t=%c3%93scar%20Alfaro" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/biblioteca/poetas-mios-oscar-alfaro/&amp;t=%c3%93scar%20Alfaro" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
