--- a/public/biblioteca/poetas-mios-roque-dalton/index.html
+++ b/public/biblioteca/poetas-mios-roque-dalton/index.html
@@ -776,7 +776,7 @@ Fonseca, Miguel Ángel Asturias, Juan Gelman y Nazim Hikmet.</p>
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/biblioteca/poetas-mios-roque-dalton/&amp;t=Roque%20Dalton" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/biblioteca/poetas-mios-roque-dalton/&amp;t=Roque%20Dalton" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
