--- a/public/cultura/26-de-julio/index.html
+++ b/public/cultura/26-de-julio/index.html
@@ -763,7 +763,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/cultura/26-de-julio/&amp;t=26%20de%20julio,%20d%c3%ada%20de%20la%20rebeld%c3%ada%20nacional%20en%20Cuba" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/cultura/26-de-julio/&amp;t=26%20de%20julio,%20d%c3%ada%20de%20la%20rebeld%c3%ada%20nacional%20en%20Cuba" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
