--- a/public/cultura/a-pesar-de-la-ira/index.html
+++ b/public/cultura/a-pesar-de-la-ira/index.html
@@ -746,7 +746,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/cultura/a-pesar-de-la-ira/&amp;t=Marcelo%20Quiroga%20Santa%20Cruz" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/cultura/a-pesar-de-la-ira/&amp;t=Marcelo%20Quiroga%20Santa%20Cruz" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
