--- a/public/cultura/la-consigna-fsln/index.html
+++ b/public/cultura/la-consigna-fsln/index.html
@@ -742,7 +742,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/cultura/la-consigna-fsln/&amp;t=Viva%20los%20campesinos!" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/cultura/la-consigna-fsln/&amp;t=Viva%20los%20campesinos!" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
