--- a/public/historia/cumpleanios-chavez/index.html
+++ b/public/historia/cumpleanios-chavez/index.html
@@ -750,7 +750,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/historia/cumpleanios-chavez/&amp;t=66%20A%c3%b1os%20del%20nacimiento%20del%20comandante%20Ch%c3%a1vez" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/historia/cumpleanios-chavez/&amp;t=66%20A%c3%b1os%20del%20nacimiento%20del%20comandante%20Ch%c3%a1vez" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
