--- a/public/noticias/advierten-proceso-penal-contra/index.html
+++ b/public/noticias/advierten-proceso-penal-contra/index.html
@@ -792,7 +792,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/noticias/advierten-proceso-penal-contra/&amp;t=Advierten%20de%20proceso%20penal%20contra%20%c3%b3rgano%20electoral%20boliviano" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/noticias/advierten-proceso-penal-contra/&amp;t=Advierten%20de%20proceso%20penal%20contra%20%c3%b3rgano%20electoral%20boliviano" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
