--- a/public/noticias/cob-decide-huelga-general/index.html
+++ b/public/noticias/cob-decide-huelga-general/index.html
@@ -800,7 +800,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/noticias/cob-decide-huelga-general/&amp;t=COB%20decide%20huelga%20general%20indefinida%20en%20demanda%20de%20elecciones%20el%206%20de%20septiembre" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/noticias/cob-decide-huelga-general/&amp;t=COB%20decide%20huelga%20general%20indefinida%20en%20demanda%20de%20elecciones%20el%206%20de%20septiembre" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
