--- a/public/noticias/dictadura-boliviana-se-dispone-/index.html
+++ b/public/noticias/dictadura-boliviana-se-dispone-/index.html
@@ -805,7 +805,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/noticias/dictadura-boliviana-se-dispone-/&amp;t=Dictadura%20boliviana%20se%20dispone%20a%20detener%20a%20candidato%20del%20MAS" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/noticias/dictadura-boliviana-se-dispone-/&amp;t=Dictadura%20boliviana%20se%20dispone%20a%20detener%20a%20candidato%20del%20MAS" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
