--- a/public/project/internal-project/index.html
+++ b/public/project/internal-project/index.html
@@ -833,7 +833,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/project/internal-project/&amp;t=Internal%20Project" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/project/internal-project/&amp;t=Internal%20Project" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
