--- a/public/articulos/el-golpismo/index.html
+++ b/public/articulos/el-golpismo/index.html
@@ -795,7 +795,7 @@ Bajo estos señalados factores constituyentes de un golpe de Estado, los nuevos 
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/articulos/el-golpismo/&amp;t=Anatom%c3%ada%20de%20los%20golpes%20de%20Estado" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/articulos/el-golpismo/&amp;t=Anatom%c3%ada%20de%20los%20golpes%20de%20Estado" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
