--- a/public/biblioteca/antonio-gramsci/index.html
+++ b/public/biblioteca/antonio-gramsci/index.html
@@ -769,7 +769,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/biblioteca/antonio-gramsci/&amp;t=La%20formaci%c3%b3n%20de%20los%20intelectuales" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/biblioteca/antonio-gramsci/&amp;t=La%20formaci%c3%b3n%20de%20los%20intelectuales" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
