--- a/public/biblioteca/rosa-luxemburgo/index.html
+++ b/public/biblioteca/rosa-luxemburgo/index.html
@@ -778,7 +778,7 @@ totalmente a la gran batalla histórica.</p>
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/biblioteca/rosa-luxemburgo/&amp;t=Rosa%20Luxemburgo" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/biblioteca/rosa-luxemburgo/&amp;t=Rosa%20Luxemburgo" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
