--- a/public/historia/han-matado-a-nuestro-padre/index.html
+++ b/public/historia/han-matado-a-nuestro-padre/index.html
@@ -795,7 +795,7 @@
       
       
       <li>
-        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.apphttps://kcomunitaria.netlify.app/historia/han-matado-a-nuestro-padre/&amp;t=Han%20matado%20a%20nuestro%20padre,%20Gualberto%20Villarroel" target="_blank" rel="noopener" class="share-btn-facebook">
+        <a href="https://www.facebook.com/sharer.php?u=https://kcomunitaria.netlify.app/historia/han-matado-a-nuestro-padre/&amp;t=Han%20matado%20a%20nuestro%20padre,%20Gualberto%20Villarroel" target="_blank" rel="noopener" class="share-btn-facebook">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
