casi todos los libros

--- a/public/biblioteca/informe-violacion-derechos-humanos/index.html
+++ b/public/biblioteca/informe-violacion-derechos-humanos/index.html
@@ -739,7 +739,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tag/marxismo/">marxismo</a>
+  <a class="badge badge-light" href="/tag/historia/">historia</a>
   
 </div>
 
