adicionando texto a los videos de benjo cruz

--- a/public/cultura/homenaje-a-benjo-cruz/index.html
+++ b/public/cultura/homenaje-a-benjo-cruz/index.html
@@ -27,7 +27,7 @@
   
     
   
-  <meta name="description" content="    ">
+  <meta name="description" content="“Voy a cantar una copla por si acaso muera yo, porque nosotros los hombres hoy somos, mañana no.” -- Benjo Cruz">
 
   
   <link rel="alternate" hreflang="es" href="https://kcomunitaria.netlify.app/cultura/homenaje-a-benjo-cruz/">
@@ -283,7 +283,7 @@
   <meta property="og:site_name" content="Kallpa Comunitaria">
   <meta property="og:url" content="https://kcomunitaria.netlify.app/cultura/homenaje-a-benjo-cruz/">
   <meta property="og:title" content="Nuestro homenaje a Benjo Cruz! | Kallpa Comunitaria">
-  <meta property="og:description" content="    "><meta property="og:image" content="https://kcomunitaria.netlify.app/cultura/homenaje-a-benjo-cruz/featured.jpg">
+  <meta property="og:description" content="“Voy a cantar una copla por si acaso muera yo, porque nosotros los hombres hoy somos, mañana no.” -- Benjo Cruz"><meta property="og:image" content="https://kcomunitaria.netlify.app/cultura/homenaje-a-benjo-cruz/featured.jpg">
   <meta property="twitter:image" content="https://kcomunitaria.netlify.app/cultura/homenaje-a-benjo-cruz/featured.jpg"><meta property="og:locale" content="es">
   
     
@@ -693,7 +693,8 @@
   <div class="article-container">
 
     <div class="article-style">
-      <hr>
+      <p>“Voy a cantar una copla por si acaso muera yo, porque nosotros los hombres hoy somos, mañana no.” &ndash; Benjo Cruz</p>
+<hr>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="https://www.youtube.com/embed/DbcgcGT-7ZY" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
