--- a/public/cultura/nilo-soruco-a-benjo-cruz/index.html
+++ b/public/cultura/nilo-soruco-a-benjo-cruz/index.html
@@ -27,7 +27,7 @@
   
     
   
-  <meta name="description" content="    ">
+  <meta name="description" content="“Muy amables, muchas gracias. Muy contento de estar en este rinconcito, donde yo entiendo el folklore de una determinada manera, como la expresión integral del hombre...">
 
   
   <link rel="alternate" hreflang="es" href="https://kcomunitaria.netlify.app/cultura/nilo-soruco-a-benjo-cruz/">
@@ -283,7 +283,7 @@
   <meta property="og:site_name" content="Kallpa Comunitaria">
   <meta property="og:url" content="https://kcomunitaria.netlify.app/cultura/nilo-soruco-a-benjo-cruz/">
   <meta property="og:title" content="Nilo Soruco a Benjo Cruz! | Kallpa Comunitaria">
-  <meta property="og:description" content="    "><meta property="og:image" content="https://kcomunitaria.netlify.app/cultura/nilo-soruco-a-benjo-cruz/featured.png">
+  <meta property="og:description" content="“Muy amables, muchas gracias. Muy contento de estar en este rinconcito, donde yo entiendo el folklore de una determinada manera, como la expresión integral del hombre..."><meta property="og:image" content="https://kcomunitaria.netlify.app/cultura/nilo-soruco-a-benjo-cruz/featured.png">
   <meta property="twitter:image" content="https://kcomunitaria.netlify.app/cultura/nilo-soruco-a-benjo-cruz/featured.png"><meta property="og:locale" content="es">
   
     
@@ -693,7 +693,8 @@
   <div class="article-container">
 
     <div class="article-style">
-      <hr>
+      <p>“Muy amables, muchas gracias. Muy contento de estar en este rinconcito, donde yo entiendo el folklore de una determinada manera, como la expresión integral del hombre, como la manifestación total de él. Es decir, el hombre mediante el folklore le canta al amor, le canta al paisaje, le canta a la Patria, le canta a la mujer amada, pero también le canta a su problemática social, y nosotros, los que queremos ser folkloristas no podemos eludir ese tema porque eludirlo sería cobardía.” &ndash; Benjo Cruz</p>
+<hr>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
   <iframe src="https://www.youtube.com/embed/2Un7_sE_YJg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
