completando texto en victor jara

--- a/public/cultura/victor-jara/index.html
+++ b/public/cultura/victor-jara/index.html
@@ -696,7 +696,7 @@
 
     <div class="article-style">
       <p>Fragmento del libro “Víctor Jara un canto truncado”, de Joan Jara, su compañera:</p>
-<p>“Cuento con otros dos atisbos fugaces de Víctor en el estadio, dos testimonios más; un mensaje para mí transmitido por alguien que estuvo a su lado algunas horas en los camarines -convertidos en sala de tortura-, un mensaje de amor hacia sus hijas y hacia mí. Luego fue, una vez más, insultado y golpeado, en público; al borde de la histeria y perdido el dominio de sí, el oficial apodado &ldquo;El Príncipe&rdquo; le gritó; &ldquo;¡Canta ahora si puedes, hijo de puta!&rdquo;. Después de cuatro días de sufrimiento, la voz de Víctor sonó en el estadio para cantar un verso de &ldquo;Venceremos&rdquo;, el himno de la Unidad Popular. A continuación</p>
+<p>“Cuento con otros dos atisbos fugaces de Víctor en el estadio, dos testimonios más; un mensaje para mí transmitido por alguien que estuvo a su lado algunas horas en los camarines -convertidos en sala de tortura-, un mensaje de amor hacia sus hijas y hacia mí. Luego fue, una vez más, insultado y golpeado, en público; al borde de la histeria y perdido el dominio de sí, el oficial apodado &ldquo;El Príncipe&rdquo; le gritó; &ldquo;¡Canta ahora si puedes, hijo de puta!&rdquo;. Después de cuatro días de sufrimiento, la voz de Víctor sonó en el estadio para cantar un verso de &ldquo;Venceremos&rdquo;, el himno de la Unidad Popular. A continuación, fue golpeado y evacuado a rastras para someterlo a la última etapa de su agonía.</p>
 <hr>
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
