corrections to Bacos article

--- a/public/index.html
+++ b/public/index.html
@@ -1281,7 +1281,7 @@
     
 
   
-  <span >Por: Baco -- Miembro de la Red de Economía Política</span>
+  <span >Por: Baco — Miembro de la &#34;Red de Economía Política&#34;</span>
   </div>
   
   
