con el pdf del articulo del BACO

--- a/public/articulos/triunfo-electoral/index.html
+++ b/public/articulos/triunfo-electoral/index.html
@@ -686,6 +686,45 @@
 
 
 
+<div class="btn-links mb-3">
+  
+  
+
+
+
+
+
+
+
+
+  
+    
+  
+
+
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/articulos/triunfo-electoral/Bolivia%20el%20triunfo%20electoral%20del%20MAS.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
 
 </div>
 
