Semblanza de Marcelo Quiroga corregio 2

--- a/public/articulos/semblanza-marcelo-quiroga/index.html
+++ b/public/articulos/semblanza-marcelo-quiroga/index.html
@@ -635,7 +635,7 @@
     
 
   
-  <span >Eduardo Pardo — Primer Secretario PS-1</span>
+  <span >Eduardo Pardo — Militante histórico del PS-1</span>
   </div>
   
   
@@ -701,7 +701,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="/~Semblanza_Marcelo_Quiroga.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/articulos/Semblanza_Marcelo_Quiroga.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -767,7 +767,7 @@ Marcelo destaca también porque es el dirigente que hizo del socialismo una expe
 </center>
 <p>Por:
 <strong>Eduardo Pardo</strong><br>
-<em>Primer Secretario PS-1</em></p>
+<em>Militante histórico del PS-1</em></p>
 
     </div>
 
