--- a/public/index.html
+++ b/public/index.html
@@ -1281,7 +1281,7 @@
     
 
   
-  <span >Eduardo Pardo — Primer Secretario PS-1</span>
+  <span >Eduardo Pardo — Militante histórico del PS-1</span>
   </div>
   
   
